[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-knowledge-base"
version = "0.1.0"
description = "An LLM-maintained personal knowledge base with CLI and static HTML export"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "LLM Knowledge Base", email = "shantanu.y@gmail.com"}
]
keywords = ["llm", "knowledge-base", "cli", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "anthropic==0.25.0",
    "pydantic==2.6.0",
    "pydantic-settings==2.1.0",
    "typer==0.9.0",
    "python-dotenv==1.0.0",
    "click==8.1.7",
    "markdown==3.5.2",
    "PyYAML==6.0.1",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "feedparser==6.0.11",
    "Pillow==10.1.0",
    "numpy==1.26.3",
    "scikit-learn==1.3.2",
    "rich==13.7.0",
    "PyPDF2==3.0.1",
    "sentence-transformers==2.2.2",
    "torch==2.0.0",
    "transformers==4.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
llm-kb = "llm_knowledge_base.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/llm_knowledge_base --cov-report=term-only"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
